<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/profile"
        android:title="@string/profile" />
    <item
        android:id="@+id/borrow_request"
        android:title="Borrow Request"/>
    <item
        android:id="@+id/personal_borrow_request"
        android:title="Personal Borrow Request Handler"/>
    <item
        android:id="@+id/browse"
        android:title="Browse"/>
    <item
        android:id="@+id/lender_request"
        android:title="Lender Request"/>
    <item
        android:id="@+id/chat"
        android:title="@string/chat" />
    <item
        android:id="@+id/setting"
        android:title="@string/setting" />
    <item
        android:id="@+id/sign_out"
        android:title="@string/sign_out" />
</menu>